--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </style>
 </head>
 <body>
-    <h1>Instapay365</h1>
+    <h1>InstaPay365</h1>
     <p>Coming Soon!</p>
     <form id="signup-form">
         <input type="email" id="email" placeholder="Enter your email" required>
